--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
     <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
     <script src="https://cdn.rawgit.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
 </head>
+    <a-scene embedded arjs>
+        <a-marker preset="hiro">
+            <a-entity 
+                id="model" 
+                gltf-model="url(assets/model1.gltf)" 
+                scale="0.01 0.01 0.01" 
+                position="0 0 0" 
+                rotation="0 0 0">
+            </a-entity>
+        </a-marker>
+        <a-entity camera></a-entity>
+    </a-scene>
 <body>   
 </body>
 </html>
