--- a/index.html
+++ b/index.html
@@ -8,12 +8,24 @@
         .button-container {
             position: absolute;
             bottom: 20px;
-            width: 100%;
+            left: 50%;
+            transform: translateX(-50%);
+            width: auto;
             text-align: center;
+            z-index: 999;
         }
         .button-container button {
             padding: 10px 20px;
             font-size: 16px;
+            margin: 5px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        .button-container button:hover {
+            background-color: #0056b3;
         }
     </style>
 </head>
@@ -29,9 +41,13 @@
         </a-marker>
         <a-entity camera></a-entity>
     </a-scene>
+
     <div class="button-container">
         <button onclick="changeModel()">Change Model</button>
+        <button onclick="increaseScale()">Increase Scale</button>
+        <button onclick="decreaseScale()">Decrease Scale</button>
     </div>
+
     <script src="scripts.js"></script>
 <body>   
 </body>
