--- a/index.html
+++ b/index.html
@@ -48,9 +48,14 @@
 
     <div class="button-container">
         <button onclick="changeModel()">Change Model</button>
-        <button onclick="increaseScale()">Increase Scale</button>
+     
+        <div class="slide-container">
+            <label for="scale-range">Adjust Scale:</label>
+            <input type="range" min="1" max="100" value="50" class="slider" id="scale-range" oninput="adjustScale(this.value)">
+        </div>
+    <!--<button onclick="increaseScale()">Increase Scale</button>
         <button onclick="decreaseScale()">Decrease Scale</button>
-        <br>
+        <br> -->
         <button onclick="adjustPosition('x', 0.1)">Move X +</button>
         <button onclick="adjustPosition('x', -0.1)">Move X -</button>
         <br>
