--- a/index.html
+++ b/index.html
@@ -51,11 +51,27 @@
      
         <div class="slide-container">
             <label for="scale-range">Adjust Scale:</label>
-            <input type="range" min="1" max="100" value="50" class="slider" id="scale-range" oninput="adjustScale(this.value)">
+            <input type="range" min="1" max="10" value="5" class="slider" id="scale-range" oninput="adjustScale(this.value)">
         </div>
-    <!--<button onclick="increaseScale()">Increase Scale</button>
+        <div class="slide-container">
+            <label for="x-position-range">Adjust X Position:</label>
+            <input type="range" min="-2" max="2" step="0.5" value="0" class="slider" id="x-position-range" oninput="adjustXPosition('x',this.value)">
+            <label for="y-position-range">Adjust Y Position:</label>
+            <input type="range" min="-2" max="2" step="0.5" value="0" class="slider" id="y-position-range" oninput="adjustXPosition('y',this.value)">
+            <label for="z-position-range">Adjust Z Position:</label>
+            <input type="range" min="-2" max="2" step="0.5" value="0" class="slider" id="z-position-range" oninput="adjustXPosition('z',this.value)">
+        </div>
+     <!--   <div class="slide-container">
+            <label for="y-position-range">Adjust Y Position:</label>
+            <input type="range" min="-2" max="2" step="0.5" value="0" class="slider" id="y-position-range" oninput="adjustXPosition('y',this.value)">
+        </div>
+        <div class="slide-container">
+            <label for="z-position-range">Adjust Z Position:</label>
+            <input type="range" min="-2" max="2" step="0.5" value="0" class="slider" id="z-position-range" oninput="adjustXPosition('z',this.value)">
+        </div>
+            <button onclick="increaseScale()">Increase Scale</button>
         <button onclick="decreaseScale()">Decrease Scale</button>
-        <br> -->
+        <br> 
         <button onclick="adjustPosition('x', 0.1)">Move X +</button>
         <button onclick="adjustPosition('x', -0.1)">Move X -</button>
         <br>
@@ -64,6 +80,7 @@
         <br>
         <button onclick="adjustPosition('z', 0.1)">Move Z +</button>
         <button onclick="adjustPosition('z', -0.1)">Move Z -</button>
+    -->
     </div>
 
     <script src="scripts.js"></script>
